--- a/templates/server/configuration.xml.erb
+++ b/templates/server/configuration.xml.erb
@@ -12,5 +12,25 @@
     <keyserver>
       <enabled>false</enabled>
     </keyserver>
-  </license>
+	</license>
+  <server>
+    <ondemand>
+      <security>
+        <enabled>false</enabled>
+        <roles>
+          <role0>
+            <name>anonymousrole</name>
+            <schema/>
+          </role0>
+        </roles>
+      </security>
+    </ondemand>
+  </server>
+  <templateprocessor>
+    <cache>
+      <max-memory-entries>100</max-memory-entries>
+      <max-disk-entries>200</max-disk-entries>
+      <max-disk-space>500</max-disk-space>
+    </cache>
+  </templateprocessor>
 </config>
