Fix deprecation warnings

--- a/templates/server/configuration.xml.erb
+++ b/templates/server/configuration.xml.erb
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <config>
   <roles>
-    <role0>process-server-<%= server_category %></role0>
+    <role0>process-server-<%= @server_category %></role0>
   </roles>
 	<license>
     <client>
       <keyserver>
-        <host><%= key_server %></host>
+        <host><%= @key_server %></host>
       </keyserver>
     </client>
     <keyserver>
