--- a/templates/iac/server/configuration-resource.xml.erb
+++ b/templates/iac/server/configuration-resource.xml.erb
@@ -21,8 +21,8 @@ For more info, check the manual.
                     <name type="value">default-store</name>
                     <type type="value">havail</type>
                     <settings>
-                        <location type="value"><%= @havail_dir %></location>
-                        <location-temp type="value">/data/scriptura/resource/scriptura-8.0/data/tmp</location-temp>
+                        <location type="value"><%= @havail_dir %>/default-store</location>
+                        <location-temp type="value"><%= @havail_dir %>/tmp</location-temp>
                     </settings>
                 </store_0>
             </stores>
@@ -37,6 +37,13 @@ For more info, check the manual.
             <password type="value"/>
         </monitorserver>
         <documentflow>
+            <database>
+                <driver type="value">oracle.jdbc.OracleDriver</driver>
+                <dialect type="value">org.hibernate.dialect.Oracle10gDialect</dialect>
+                <connection-url type="value">jdbc:oracle:thin:@//server:1521/service</connection-url>
+                <username type="value"></username>
+                <password encryption="aes" type="value"></password>
+            </database>
             <security>
                 <roles>
                     <role1>
@@ -74,11 +81,11 @@ For more info, check the manual.
         </setup>
         <environment type="value">production</environment>
         <database>
-            <password type="value">somepassword</password>
             <driver type="value">oracle.jdbc.OracleDriver</driver>
             <dialect type="value">org.hibernate.dialect.Oracle11gDialect</dialect>
             <connection-url type="value">jdbc:oracle:thin:@//server:1521/service</connection-url>
-            <username type="value">someusername</username>
+            <username type="value"></username>
+            <password encryption="aes" type="value"></password>
         </database>
         <tag>
             <resource type="value">ScripturaStartResourceServer</resource>
