--- a/templates/iac/server/configuration-resource.xml.erb
+++ b/templates/iac/server/configuration-resource.xml.erb
@@ -92,4 +92,17 @@ For more info, check the manual.
         </tag>
         <hostname type="value"><%= @hostname %></hostname>
     </generic>
+    <templateprocessor>
+        <mail>
+            <com.id.scriptura.templateprocessor.email.impl.javamail>
+                <host type="value"><%= @mail_host %></host>
+                <port type="value">25</port>
+            </com.id.scriptura.templateprocessor.email.impl.javamail>
+        </mail>
+        <fonts>
+            <directories>
+              <directory0 type="value"><%= @fonts_dir %></directory0>
+            </directories>
+        </fonts>
+    </templateprocessor>
 </config>
