--- a/templates/iac/server/ScripturaStartFrontendServer.ini.erb
+++ b/templates/iac/server/ScripturaStartFrontendServer.ini.erb
@@ -35,7 +35,7 @@ startfrontendserver.log
 -XX:+AggressiveHeap
 -XX:+UseCompressedOops
 -Duser.home=/data/scriptura/frontend
-<% if not @startup_options.nil? %>
+<% if @startup_options %>
 <% @startup_options.each do |startup_option| -%>
 <%= startup_option %>
 <% end -%>
