Dont add newlines when not needed

--- a/templates/iac/server/ScripturaStartFrontendServer.ini.erb
+++ b/templates/iac/server/ScripturaStartFrontendServer.ini.erb
@@ -35,8 +35,8 @@ startfrontendserver.log
 -XX:+AggressiveHeap
 -XX:+UseCompressedOops
 -Duser.home=/data/scriptura/frontend
-<% if @startup_options %>
+<% if @startup_options -%>
 <% @startup_options.each do |startup_option| -%>
 <%= startup_option %>
 <% end -%>
-<% end %>
+<% end -%>
