--- a/templates/iac/server/ScripturaStartProcessServer.ini.erb
+++ b/templates/iac/server/ScripturaStartProcessServer.ini.erb
@@ -33,8 +33,8 @@ startprocessserver.log
 -XX:+AggressiveHeap
 -XX:+UseCompressedOops
 -Duser.home=/data/scriptura/process
-<% if @startup_options %>
+<% if @startup_options -%>
 <% @startup_options.each do |startup_option| -%>
 <%= startup_option %>
 <% end -%>
-<% end %>
+<% end -%>
