vertical sections and split-screen preview

--- a/templates/iac/server/configuration-frontend.xml.erb
+++ b/templates/iac/server/configuration-frontend.xml.erb
@@ -34,7 +34,7 @@ For more info, check the manual.
         <default-expanded type="value">false</default-expanded>
         <standalone type="value">true</standalone>
         <show-buttons type="value">true</show-buttons>
-        <preview-mode type="value">popup</preview-mode>
+        <preview-mode type="value">split-right</preview-mode>
         <save-enable type="value">true</save-enable>
         <message-domain type="value">http://10.0.0.123</message-domain>
         <external>
@@ -49,6 +49,9 @@ For more info, check the manual.
           <collection type="value">/db/apps/livedocs</collection>
           <system type="value">/db/system/config</system>
         </exist>
+        <section>
+          <display>vertical</display>
+        </section>
       </livedocs>
         <security>
             <key>
