wiml: aaronv: Increase JVM Heap size for Process service after ID consultancy

--- a/templates/iac/server/ScripturaStartProcessServer.ini.erb
+++ b/templates/iac/server/ScripturaStartProcessServer.ini.erb
@@ -19,8 +19,8 @@ startprocessserver.log
 -server
 -vmargs
 -Djava.security.auth.login.config=/opt/scriptura/process/startprocessserver/../configuration/login.conf
--Xms4096M
--Xmx4096M
+-Xms6G
+-Xmx6G
 -XX:ReservedCodeCacheSize=128m
 -Djava.awt.headless=true
 -Dorg.mortbay.log.class=com.id.serverapplication.servletcontainer.internal.logger.JettyToLogger
