--- a/templates/iac/server/configuration-process.xml.erb
+++ b/templates/iac/server/configuration-process.xml.erb
@@ -1116,6 +1116,10 @@ For more info, check the manual.
             </fonts>
         </pdf>
     </templateprocessor>
+    <documentflowprocessor>
+        <default-store-class type="value">com.id.scriptura.documentflow.standard.impl.store.file.FileStore</default-store-class>
+        <max-threads type="value">2240</max-threads>
+    </documentflowprocessor>
     <cloud>
         <connection>
             <service>
@@ -1131,4 +1135,7 @@ For more info, check the manual.
             <process type="value"><%= @base_url %></process>
         </baseurl>
     </cloud>
+    <documentflowprocessor>
+        <max-threads>2240</max-threads>
+    </documentflowprocessor>
 </config>
