aaronv: wiml: heap size G to M

--- a/templates/iac/server/ScripturaStartProcessServer.ini.erb
+++ b/templates/iac/server/ScripturaStartProcessServer.ini.erb
@@ -19,8 +19,8 @@ startprocessserver.log
 -server
 -vmargs
 -Djava.security.auth.login.config=/opt/scriptura/process/startprocessserver/../configuration/login.conf
--Xms6G
--Xmx6G
+-Xms6144M
+-Xmx6144M
 -XX:ReservedCodeCacheSize=128m
 -Djava.awt.headless=true
 -Dorg.mortbay.log.class=com.id.serverapplication.servletcontainer.internal.logger.JettyToLogger
