documentflowprocess/maxThreads added in configuration template

--- a/templates/iac/server/configuration-process.xml.erb
+++ b/templates/iac/server/configuration-process.xml.erb
@@ -1132,6 +1132,6 @@ For more info, check the manual.
         </baseurl>
     </cloud>
     <documentflowprocessor>
-        <max-threads>2240</max-threads>
+        <max-threads></max-threads>
     </documentflowprocessor>
 </config>
